--- a/dapp/public/index.html
+++ b/dapp/public/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans:100,200,300,400,400i,500,500i,600" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Dosis:200,300,400,500,600,700,800" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
     <title>Bitsausage</title>
   </head>
   <body style="margin: 0; -webkit-font-smoothing: antialiased;-moz-osx-font-smoothing: grayscale;">
